# quicktts

./: .gitignore  LiveStream_Connecter.py  README.md  livestream.py  main.py  pyproject.toml
referance_code/: TwitchPlays_Connection.py  TwitchPlays_KeyCodes.py  TwitchPlays_TEMPLATE.py
