[project]
name = "quicktts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "profanityfilter>=2.1.0",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "pynput>=1.8.1",
    "requests>=2.32.3",
    "ruff>=0.11.10",
    "yapper-tts>=0.7.0",
]


[tool.ruff]
# Same as Black.
line-length = 180
indent-width = 4
